<?xml version="1.0"?>
<package>
  <name>move_robot_msgs</name>
  <version>0.0.0</version>
  <description>The move_robot_msgs package</description>

  <maintainer email="rui@todo.todo">rui</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>

  <!-- The export tag contains other, unspecified, tags -->

</package>
